istio/authors-sa.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: authors
  labels:
    app: authors
    version: v1
spec:
  selector:
    matchLabels:
      app: authors
      version: v1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"
      labels:
        app: authors
        version: v1
    spec:
      containers:
      - image: haraldu/authors:1
        name: authors
        ports:
        - containerPort: 3000
          name: authors
      restartPolicy: Always    
      serviceAccountName: authors
