istio/web-api-sa.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-api-v1
  labels:
    app: web-api  
spec:
  selector:                
    matchLabels:     
      app: web-api  
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true" 
      labels:
        app: web-api
        version: v1
    spec:
      containers:
      - name: web-api
        image: haraldu/web-api:1
        ports:
        - containerPort: 9080
      restartPolicy: Always
      serviceAccountName: web-api      
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-api-v2
  labels:
    app: web-api  
spec:
  selector:                
    matchLabels:     
      app: web-api  
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true" 
      labels:
        app: web-api
        version: v2
    spec:
      containers:
      - name: web-api
        image: haraldu/web-api:2
        ports:
        - containerPort: 9080
      restartPolicy: Always
      serviceAccountName: web-api  
---
