istio/web-api-v2-firefox.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualservice-ingress
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway-ingress
  http:
  - match:
    - headers:
        user-agent:
          regex: '.*Firefox.*'
      uri:
        prefix: /web-api/v1/getmultiple  
    route:
    - destination:
        host: web-api
        subset: v2    
  - match:
    - uri:
        prefix: /web-api/v1/getmultiple  
    route:
    - destination:
        host: web-api
        subset: v1
  - match:
    - uri:
        prefix: /openapi/ui/ 
    route:
    - destination:
        port:
          number: 9080
        host: web-api
  - match:
    - uri:
        prefix: /openapi
    route:
    - destination:
        port:
          number: 9080
        host: web-api
---
